src/css/about.css
/* ... */
.portrait {
    position:absolute;
    width:100%; height:100%;
    opacity:0.35;
    object-fit:contain;
    transform:scale(0.95);
}

#smallMountain {
    bottom:0; left:20vw;
    width:80%; height:50%;
    clip-path: polygon(50% 0%, 50% 0%, 50% 0%, 100% 100%, 100% 100%, 100% 100%, 0% 100%, 0% 100%);
    filter:drop-shadow(0px 0px 0px rgba(255, 255, 255, 0));
}
.mountainContainer.switch #smallMountain {
    width:100vw; height:60%;
    animation:none;
}
@media (hover: hover) {
    .mountainContainer.switch #smallMountain:hover {
        height:65%;
    }
}
#smallMountain.bubbleKnowledge {
    left:calc(100% - 200px); bottom:-15%;
    width:500px; height:500px;
    clip-path: polygon(30% 6%, 60% 0, 81% 16%, 88% 41%, 75% 65%, 45% 72%, 23% 57%, 16% 30%);
    transform:scale(2.2);
}
#smallKnowledge {
    width:70%; height:70%;
    transform:translate(90px, 12px) rotateZ(-11.3deg);
}
.smallKnowledgeHeader {
    left:0; top:0;
    transform:translate(80%, 12%);
    font-size:28px;
}
.smallKnowledgeSubheader {
    left:0; top:0;
    transform:translate(220%, 150%);
    font-size:19px;
    white-space:nowrap;
}
.smallKnowledgeText:nth-child(3) { /* Angular */
    font-size:18px;
    transform:rotateZ(10deg) translate(250%, 230%);
}
.smallKnowledgeText:nth-child(4) { /* Java */
    font-size:24px;
    transform:rotateZ(20deg) translate(610%, 55%);
}
.smallKnowledgeText:nth-child(5) { /* Azure */
    font-size:22px;
    transform:rotateZ(16deg) translate(220%, 720%);
}
.smallKnowledgeText:nth-child(6) { /* AWS */
    font-size:18px;
    transform:rotateZ(10deg) translate(660%, 510%);
}
.smallKnowledgeText:nth-child(7) { /* TypeScript */
    font-size:19px;
    transform:rotateZ(8deg) translate(70%, 685%);
}
.smallKnowledgeText:nth-child(8) { /* WordPress */
    font-size:18px;
    transform:rotateZ(3deg) translate(195%, 1065%);
}
.smallKnowledgeText:nth-child(9) { /* eCommerce */
    font-size:18px;
    transform:rotateZ(4deg) translate(135%, 565%);
}
.smallKnowledgeText:nth-child(10) { /* Kubernetes */
    font-size:18px;
    transform:rotateZ(13deg) translate(250%, 685%);
}
.smallKnowledgeText:nth-child(11) { /* Docker */
    font-size:18px;
    transform:rotateZ(-10deg) translate(60%, 460%);
}

#smallMountain.bubbleExperience {
    left:calc(100% - 250px); bottom:30%;
    width:500px; height:500px;
    clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
    transform:scale(0.5);
}
#smallExperience {
    width:100%; height:100%;
    pointer-events:all;
}
.rotateArrow {
    position:absolute;
    width:40%; height:40%;
    top:50%; left:50%;
    transform:translate(-50%, -50%);
    filter:contrast(0%) brightness(2) drop-shadow(0 0 5px white);
    pointer-events:none;
}
.mountainRotater {
    position:relative;
    height:100%; width:100%;
    animation:none;
}
#smallMountain.bubbleExperience .mountainRotater {
    pointer-events:all;
    animation:rotateCenter 10s infinite linear;
}

#smallMountain.bubbleBackground {
    left:calc(100% + 310px); bottom:21%;
    width:500px; height:500px;
    clip-path: polygon(0 60%, 60% 0, 100% 0, 100% 0, 100% 40%, 40% 100%, 0 100%, 0 100%);
    transform:scale(1.5);
}
#smallBackground {
    pointer-events:none;
}
.piano {
    position:absolute;
    width:100%; height:100%;
    opacity:0.3;
    transform:scale(1.1);
    animation:bubbleFadeIn 2s;
}

.knowledge, .experience, .background {
    display:none;
}
.mountain.bubbleKnowledge .knowledge,
.mountain.bubbleExperience .experience,
.mountain.bubbleBackground #bigBackground,
.mountain.bubbleBackground #midBackground {
    display:block;
    animation:bubbleFadeIn 2s;
}

.mountain.bubbleBackground #smallBackground {
    display:block;
}

.hoverMountain {
    display:block;
    transform-origin:bottom;
    background: rgba(88, 188, 255, 0.397);
    width:100%; height:100%;
}
.mountainContainer.switch .hoverMountain:hover {
    cursor:pointer;
}
#bigMountain.bubbleKnowledge .hoverMountain { background: rgba(110, 255, 236, 0.199); }
#midMountain.bubbleKnowledge .hoverMountain { background: rgba(182, 231, 136, 0.274); }
#smallMountain.bubbleKnowledge .hoverMountain { background: rgba(202, 216, 255, 0.287); }

.bubbleKnowledge,
.bubbleExperience,
.bubbleBackground {
    position:absolute;
}


@keyframes aboutHomeButton {
    from {
        opacity:0;
        right:200px;
    } to {
        opacity:1;
        right:60px;
    }
}

@keyframes titleFade {
    from {
        opacity: 0;
        transform:translateY(-50%);
    } to {
        opacity: 1;
        transform:translateY(0%);
    }
}

@keyframes letterFade {
    0% {
        opacity:0;
        transform:scale(0);
    } 60% {
        opacity:0;
        transform:scale(0);
    } 100% {
        opacity:1;
        transform:scale(1);
    }
}

@keyframes logoRoll {
    0% {
        opacity:0;
        transform:translateX(-60%) translateY(-50%) rotateZ(-270deg);
    } 60% {
        opacity:0;
        transform:translateX(-60%) translateY(-50%) rotateZ(-270deg);
    } 100% {
        opacity:1;
        transform:translateX(0%) translateY(-50%) rotateZ(0deg);
    }
}

@keyframes logoTextFade {
    0% {
        opacity:0;
        transform:translateX(-10%) translateY(-50%);
    } 55% {
        opacity:0;
        transform:translateX(-10%) translateY(-50%);
    } 100% {
        opacity:1;
        transform:translateX(0%) translateY(-50%);
    }
}

@keyframes mountainFadeUp {
    from {
        opacity:0;
        transform:scale(0) translateX(0);
        transform-origin:bottom;
    } to {
        opacity:1;
        transform:scale(1) translateX(0);
        transform-origin:bottom;
    }
}

@keyframes switchScaleIn {
    0% {
        opacity:0;
        transform:scale(0.5);
    } 80% {
        opacity:0;
        transform:scale(0.5);
    } 90% {
        opacity:0.8;
        transform:scale(1.3);
    } 100% {
        opacity:1;
        transform:scale(1);
    }
}
/* ... */

